style/portfolio.css
*, html{
    scroll-behavior: smooth !important;
}


body {
    display: flex;
    height: 100vh;
    margin: 0;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}

/* navbar */
.navbar {
    height: 100vh;
    width: 359px;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #242525;
    overflow-x: hidden;
    overflow-y: auto;
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.navbar_toggle{
    /* display: block; */
}


/* profile pic */
.picture {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    align-items: center;
    margin-bottom: 30px;
}

/* navbar headings */
.navbar h3 {
    display: block;
    color: #D0D0D0;
    text-align: center;
}

nav a:hover{
    cursor: pointer;
    color: #124E66;
}


.navbar h3:hover{
    cursor: pointer;
    color: #124E66;
    background: linear-gradient(to right, #225C73, #608392);
    /* -webkit-background-clip: text; */
    /* -webkit-text-fill-color: transparent; */
}


/* container for the entire left side */
#content {
    display: flex;
    flex-direction: column;
    margin-left: 359px;
    width: calc(100% - 359px);
    overflow-y: auto;
    overflow-x: hidden;
    max-height: 100vh;
}

a{
    text-decoration: none;
    color: white;
    text-align: center;
    
}

.nav_list{
    list-style: none;
    font-size: 30px;
    text-decoration: none;
    padding-right: 40px; 
}




.icon2{
    display: none;
}

.icon{
    display: none;
}

/*#icon_bars{
    display: none;
}*/

/*.fa fa-bars{
    display: none;
} */

/* intro container */
#main-container {
    background-color: #121313;
    padding: 20px;
    /* margin-top: 0; */
    /* flex-grow: 1; */
    /* overflow-x: hidden; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    scroll-behavior: smooth;
    /* overflow-y: hidden; */
}


/* signature */
.signature{
    margin-top: 50px;
    margin-bottom: 50px;
}

/* name */
#name_title {
    background: linear-gradient(to right, #225C73, #608392);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    /* color: #225C73; */
    text-align: center;
    font-size: 137px;
    /* font-size: 8vw; */
    margin: 0;
}

/* intro container */
.intro {
    text-align: left;
}

#message {
    color: #D0D0D0;
    width: 90%;
    word-break: break-word;
    font-size: 20px;
    text-align: center;
    padding-left: 58px;
    /* font-size: 2vw; */

}

/* a{
    text-decoration: none;
} */

/* logo container */
.logos {
    /* margin-top: 20px; */
    display: flex;
    gap: 40px;
}

.github {
    height: 25px;
    width: 28px;
    margin-top: 5px;
}

.github:hover{
    cursor: pointer;
}

.mail {
    height: 25px;
    width: 31.25px;
    margin-top: 5px;
}


.mail:hover{
    cursor: pointer;
    outline: none;
    background-color: transparent;
    user-select: none;
}

.phone {
    height: 25px;
    width: 25px;
    margin-top: 5px;
}

.phone:hover{
    cursor: pointer;
    outline: none;
    background-color: transparent;

}


/* dividing line */
.divider_1 {
    width: 90%;
    height: 2px;
    border-bottom: 1px solid #245D74;
    margin-top: 20px;
    background: linear-gradient(to right, #225C73, #608392);
    /* border: none; */

}

#education_container {
    background-color: #121313;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    scroll-behavior: smooth;
}

#education_name {
    color: #275F76;
    text-align: left;
    padding-left: 58px;
    font-size: 40px;
    /* font-size: 5vw; */
}

/* container list */
.list{
    padding-left: 35px;
}

.list ul li::marker{
    color: #275F76;
    font-size: 16px;
}

#bullet{
    color: #275F76;
}

/* bachelor/minor/master list */
#bachelor, #minor, #master{
    color: #D0D0D0;
    /* width: 353px; */
    font-size: 20px;
    /* font-size: 2vw; */
    /* padding-left: 58px; */
}


/* second divider */
.divider_2{
    width: 90%;
    height: 2px;
    border-bottom: 1px solid #245D74;
    margin: 20px auto;
    background: linear-gradient(to right, #225C73, #608392);

}


#experience_container{
    background-color: #121313;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start; 
    scroll-behavior: smooth;
}

/* experience title */
#experience_name {
    color: #275F76;
    text-align: left;
    padding-left: 58px;
    font-size: 40px;
    /* font-size: 5vw; */
}

#bullet_exp{
    color: #275F76;
}

.list_exp{
    padding-left: 35px;
}

.list_exp ul li::marker{
    color: #275F76;
    font-size: 16px;
}

/* first, second, third, fourth, fifth, sixth, seventh experience bullets */
#one_exp, #second_exp, #third_exp, #fourth_exp, #fifth_exp, #sixth_exp, #seventh_exp{
    color: #D0D0D0;
    width: 100%;
    font-size: 20px;
    /* font-size: 2vw; */
}

/* extra space between insurancea and june */
.extra1{
    margin: 152px;
}

#indent{
    color: #275F76;
}

/* third divider */
.divider_3{
    width: 90%;
    height: 2px;
    border-bottom: 1px solid #245D74;
    margin: 20px auto;
    background: linear-gradient(to right, #225C73, #608392);

}

/* project */
#project_container{
    background-color: #121313;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start; 
    scroll-behavior: smooth;
}

/* project title */
#project_name {
    color: #275F76;
    text-align: left;
    padding-left: 58px;
    font-size: 40px;
    /* font-size: 5vw; */
}

.list_project{
    padding-left: 35px;
}

/* project bullets */
.list_project ul li::marker{
    color: #275F76;
    font-size: 16px;
}

#bullet_project{
    color: #275F76;
}
/* ... */

